Better error handling on save
Fixes for multiple competitor create


Bug fixes

--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -96,10 +96,10 @@
                 @Html.DisplayFor(model => model.Url)
             </dd>
             <dt>
-                <label asp-for="DefaultScoringSystem">Default Scoring System</label>
+                <label asp-for="DefaultScoringSystemName">Default Scoring System</label>
             </dt>
             <dd>
-                @Html.DisplayFor(model => model.DefaultScoringSystem.Name)
+                @Html.DisplayFor(model => model.DefaultScoringSystemName)
             </dd>
         </dl>
 
