--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -102,25 +102,25 @@
                             <div class="row competitor-row">
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <input type="text" name="competitors[0].SailNumber" class="form-control"
+                                        <input type="text" name="competitors[@i].SailNumber" class="form-control"
                                                data-column="0" data-row="@i" value="@Model.Competitors[i].SailNumber"/>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <input type="text" name="competitors[0].Name" class="form-control"
+                                        <input type="text" name="competitors[@i].Name" class="form-control"
                                                data-column="1" data-row="@i" value="@Model.Competitors[i].Name"/>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <input type="text" name="competitors[0].BoatName" class="form-control"
+                                        <input type="text" name="competitors[@i].BoatName" class="form-control"
                                                data-column="2" data-row="@i" value="@Model.Competitors[i].BoatName"/>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <input type="text" name="competitors[0].HomeClubName" class="form-control"
+                                        <input type="text" name="competitors[@i].HomeClubName" class="form-control"
                                                data-column="3" data-row="@i" value="@Model.Competitors[i].HomeClubName"/>
                                     </div>
                                 </div>
