--- a/SailScores.Web/Views/Regatta/Create.cshtml
+++ b/SailScores.Web/Views/Regatta/Create.cshtml
@@ -14,9 +14,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <p>Regattas are sailing events held over a few days, unlike 
-            <a asp-controller="Series" asp-action="Create">series</a> which have recurring races. They will be shared on the front page of SailScores for a week before and
-        after their scheduled dates.</p>
+        <p>Regattas are sailing events held over a few days with the same competitors, unlike 
+        <a asp-controller="Series" asp-action="Create">series</a> which usually occur over
+        multiple weeks with varying competitors. Regattas will be shared on the front page
+        of SailScores for a week before and after their scheduled dates.</p>
     </div>
 </div>
 
