--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -75,8 +75,8 @@
                 <span asp-validation-for="Url" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DefaultScoringSystem">Default Scoring System</label>
-                <select id="defaultScoringSystemId" asp-for="DefaultScoringSystem.Id" class="form-control">
+                <label asp-for="DefaultScoringSystemId">Default Scoring System</label>
+                <select id="defaultScoringSystemId" asp-for="DefaultScoringSystemId" class="form-control">
                     @foreach (var scoringSystem in Model.ScoringSystemOptions)
                     {
                         <option value="@scoringSystem.Id">
@@ -84,7 +84,7 @@
                         </option>
                     }
                 </select>
-                <span asp-validation-for="DefaultScoringSystem" class="text-danger"></span>
+                <span asp-validation-for="DefaultScoringSystemId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
