--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -32,8 +32,12 @@
         <br />
         }
         <hr class="my-4">
-        <br class="d-none d-md-inline" />
-        <p class="d-none d-md-inline">SailScores is <a href="https://github.com/jbfraser1/SailScores">open source</a> and volunteer driven.</p>
-        <p class="d-none d-md-inline">Host your club's scores on this site for free. <a href="mailto:info@sailscores.com">Contact us</a> and we'll help you get started.</p>
+        <span class="d-none d-md-inline">
+            <br />
+            <p>SailScores is <a href="https://github.com/jbfraser1/SailScores">open source</a> and volunteer driven.</p>
+            <p>
+                <a asp-area="" asp-controller="ClubRequest" asp-action="Index">Host your club's scores</a> on this site for free.
+            </p>
+        </span>
     </div>
 </div>
