--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -10,81 +10,149 @@
 <div class="container p-0 justify-content-between">
     <h4>Update a race</h4>
     <hr />
-    <form id="raceform" asp-action="Edit" asp-route-returnurl="@ViewData["ReturnUrl"]">
+    <form id="raceform" asp-action="Edit"
+          asp-route-returnurl="@ViewData["ReturnUrl"]">
+        <input type="hidden" id="clubInitials" asp-for="ClubInitials" />
         <input type="hidden" id="clubId" asp-for="ClubId" />
         <input type="hidden" id="Id" asp-for="Id" />
+        <input type="hidden" asp-for="Weather.TemperatureUnits" />
+        <input type="hidden" asp-for="Weather.WindSpeedUnits" />
+        <input type="hidden" id="cloudCover" asp-for="Weather.CloudCoverPercent" />
+        <input type="hidden" id="humidity" asp-for="Weather.Humidity" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Date" class="control-label"></label>
-            <input id="date" asp-for="Date" class="form-control"
-                   onchange="window.SailScores.loadSeriesOptions()" />
-            <span asp-validation-for="Date" class="text-danger"></span>
+        <div class="row">
+            <div class="form-group col-md-6 form-row">
+                <label asp-for="Date" class="col-4 col-form-label"></label>
+                <input id="date" asp-for="Date" class="form-control col-8"
+                       onchange="window.SailScores.loadSeriesOptions()" />
+                <span asp-validation-for="Date" class="text-danger"></span>
+            </div>
+            <div class="form-group col-md-6 form-row">
+                <label asp-for="Order" class="col-4 col-form-label">Order</label>
+                <input asp-for="Order" class="form-control col-8" type="number" />
+                <span asp-validation-for="Order" class="text-danger"></span>
+            </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Order" class="control-label">Order<em>&ensp;Used for sorting after the date</em></label>
-            <input asp-for="Order" class="form-control" type="number" />
-            <span asp-validation-for="Order" class="text-danger"></span>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label asp-for="FleetId" class="control-label">Fleet<em>&ensp;Controls the list of available competitors</em></label>
+                <select id="fleetId" asp-for="FleetId" class="form-control" onchange="window.SailScores.loadFleet()">
+                    <option selected="selected">Select a fleet...</option>
+                    @foreach (var fleet in Model.FleetOptions)
+                    {
+                        <option value="@fleet.Id" data-boat-class-id="@(fleet.BoatClasses?.Count == 1 ? fleet.BoatClasses[0].Id.ToString():"")">
+                            @fleet.Name
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="FleetId" class="text-danger"></span>
+            </div>
+            <div class="form-group col-md-6">
+                <label asp-for="SeriesIds" class="control-label">Series</label>
+                <select id="seriesIds" asp-for="SeriesIds" class="form-control" multiple>
+                    @foreach (var series in Model.SeriesOptions)
+                    {
+                        <option value="@series.Id">
+                            @series.Name (@series.Season.Name)
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="SeriesIds" class="text-danger"></span>
+            </div>
         </div>
-        <div class="form-group">
-            <label asp-for="FleetId" class="control-label">Fleet<em>&ensp;Controls the list of available competitors</em></label>
-            <select id="fleetId" asp-for="FleetId" class="form-control" onchange="window.SailScores.loadFleet()">
-                <option selected="selected">Select a fleet...</option>
-                @foreach (var fleet in Model.FleetOptions)
-                {
-                    <option value="@fleet.Id" data-boat-class-id="@(fleet.BoatClasses?.Count == 1 ? fleet.BoatClasses[0].Id.ToString():"")">
-                        @fleet.Name
-                    </option>
-                }
-            </select>
-            <span asp-validation-for="FleetId" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="SeriesIds" class="control-label">Series</label>
-            <select id="seriesIds" asp-for="SeriesIds" class="form-control" multiple>
-                @foreach (var series in Model.SeriesOptions)
-                {
-                    <option value="@series.Id">
-                        @series.Name (@series.Season.Name)
-                    </option>
-                }
-            </select>
-            <span asp-validation-for="SeriesIds" class="text-danger"></span>
-        </div>
-
         <div id="advancedFields" role="tablist">
             <div class="card">
                 <div class="card-header" role="tab" id="advancedHeading">
                     <h5 class="mb-0">
                         <a class="collapsed" data-toggle="collapse" href="#collapseAdvanced" aria-expanded="false" aria-controls="collapseAdvanced">
-                            Additional Fields
-                        </a> <span class="small"><em>&ensp;Optional</em></span>
+                            Optional Fields
+                        </a>
                     </h5>
                 </div>
 
                 <div id="collapseAdvanced" class="collapse" role="tabpanel" aria-labelledby="advancedHeading" data-parent="#advancedFields">
                     <div class="card-body">
-                        <div class="form-group">
-                            <label asp-for="Name" class="control-label">Name</label>
-                            <input asp-for="Name" class="form-control" />
-                            <span asp-validation-for="Name" class="text-danger"></span>
+                        <div class="row">
+                            <div class="form-group col-6">
+                                <div class="form-row">
+                                    <label asp-for="State" class="control-label col-form-label col-4"></label>
+                                    <select id="raceState" asp-for="State" class="form-control col-8"
+                                            onchange="window.SailScores.raceStateChanged()"
+                                            asp-items="@(Html.GetEnumSelectList<SailScores.Api.Enumerations.RaceState>())"></select>
+                                    <span asp-validation-for="State" class="text-danger"></span>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label asp-for="State" class="control-label"></label>
-                            <select id="fleetType" asp-for="State" class="form-control"
-                                    asp-items="@(Html.GetEnumSelectList<SailScores.Api.Enumerations.RaceState>())"></select>
-                            <span asp-validation-for="State" class="text-danger"></span>
+                            <div class="form-row">
+                                <label asp-for="Weather.Description" class="control-label col-3 col-md-2 col-form-label">Weather</label>
+                                <select id="weatherIcon" asp-for="Weather.Icon" data-show-content="true" class="form-control selectpicker col-3 col-md-2 pr-1">
+                                    <option>Select...</option>
+                                    @foreach (var icon in Model.WeatherIconOptions)
+                                    {
+                                        <option data-content="<i class='wi @icon.Value'></i>" value="@icon.Key"></option>
+                                    }
+                                </select>
+                                <input id="weatherDescription" asp-for="Weather.Description" class="form-control col-6 col-md-8" />
+                                <span asp-validation-for="Weather.Description" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-6">
+                                <div class="form-row">
+                                    <label asp-for="Weather.WindSpeed" class="control-label col-6 col-md-4 col-form-label ">Wind</label>
+                                    <input id="windSpeed" asp-for="Weather.WindSpeed" class="form-control col-3 text-center" type="number" />
+                                    <div class="col-3 col-form-label">@Model.Weather?.WindSpeedUnits</div>
+                                    <span asp-validation-for="Weather.WindSpeed" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <div class="form-row">
+                                    <label asp-for="Weather.WindDirection" class="control-label col-4 col-form-label ">Dir</label>
+                                    <input id="windDirection" asp-for="Weather.WindDirection" class="form-control col-3 text-center" />
+                                    <span asp-validation-for="Weather.WindDirection" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-6">
+                                <div class="form-row">
+                                    <label asp-for="Weather.WindGust" class="control-label col-6 col-md-4 col-form-label ">Gust</label>
+                                    <input id="windGust" asp-for="Weather.WindGust" class="form-control col-3 text-center" type="number" />
+                                    <div class="col-3 col-form-label">@Model.Weather?.WindSpeedUnits</div>
+                                    <span asp-validation-for="Weather.WindGust" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <div class="form-row">
+                                    <label asp-for="Weather.Temperature" class="control-label col-4 col-form-label ">Temp</label>
+                                    <input id="temperature" asp-for="Weather.Temperature" class="form-control col-3 text-center" type="number" />
+                                    <div class="col-3 col-form-label">@Model.Weather?.TemperatureUnits</div>
+                                    <span asp-validation-for="Weather.Temperature" class="text-danger"></span>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Description" class="control-label">Description</label>
-                            <input asp-for="Description" class="form-control" />
-                            <span asp-validation-for="Description" class="text-danger"></span>
+                            <div class="form-row">
+                                <label asp-for="Name" class="control-label col-3 col-md-2 col-form-label">Name</label>
+                                <input asp-for="Name" class="form-control col-9 col-md-10" />
+                                <span asp-validation-for="Name" class="text-danger"></span>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label asp-for="TrackingUrl" class="control-label">Tracking Url</label>
-                            <input asp-for="TrackingUrl" class="form-control" />
-                            <span asp-validation-for="TrackingUrl" class="text-danger"></span>
+                            <div class="form-row">
+                                <label asp-for="Description" class="control-label col-6 col-md-2 col-form-label">Comments</label>
+                                <input asp-for="Description" class="form-control col-12 col-md-10" />
+                                <span asp-validation-for="Description" class="text-danger"></span>
+                            </div>
                         </div>
-
+                        <div class="form-group">
+                            <div class="form-row">
+                                <label asp-for="TrackingUrl" class="control-label col-3 col-md-2 col-form-label">Tracking Url</label>
+                                <input asp-for="TrackingUrl" class="form-control col-9 col-md-10" />
+                                <span asp-validation-for="TrackingUrl" class="text-danger"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -94,7 +162,8 @@
             <div class="col-12 col-lg-8 pb-3">
                 <ul class="list-group" id="results">
                     @await Html.PartialAsync("_scoreEntryPartial", Model)
-                    @foreach (var score in Model.Scores)
+                    @foreach (var score in (Model.Scores ??
+                      new List<SailScores.Web.Models.SailScores.ScoreViewModel>()))
                     {
                         <li id="@score.CompetitorId" class="list-group-item"
                             data-competitorid="@score.CompetitorId" data-originalScore="@score.Place">
@@ -192,14 +261,15 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form>
-                <div class="form-group">
-                    <div class="modal-body">
+
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
                         <p> Delete the result for <span id="competitorNameToDelete"></span>?</p>
                     </div>
                     <input id="compIdToDelete" type="hidden" />
-                </div>
-            </form>
+                </form>
+            </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary" onclick="window.SailScores.deleteResult()">Delete</button>
@@ -210,31 +280,30 @@
 
 @await Html.PartialAsync("_competitorCreate", Model)
 
-    @section PreFooter {
-        <footer class="footer score-entry" id="scoreButtonFooter" style="display: none;">
-            <div class="container footer-header">
-                <div class="row float-right">
-                    <button type="button" class="close" aria-label="Close"
-                            onclick="window.SailScores.hideScoreButtonFooter()">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
+@section PreFooter {
+    <footer class="footer score-entry" id="scoreButtonFooter" style="display: none;">
+        <div class="container footer-header">
+            <div class="row float-right">
+                <button type="button" class="close" aria-label="Close"
+                        onclick="window.SailScores.hideScoreButtonFooter()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="container" id="scoreButtonDiv">
-                <!-- competitor buttons go here-->
-            </div>
-        </footer>
-    }
+        </div>
+        <div class="container" id="scoreButtonDiv">
+            <!-- competitor buttons go here-->
+        </div>
+    </footer>
+}
 
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script src="~/js/raceEditor.build.js"></script>
+    <script src="~/vendor/devbridge-autocomplete/jquery.autocomplete.js"></script>
 
-        <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
-        <script src="~/js/raceEditor.build.js"></script>
-        <script src="~/vendor/devbridge-autocomplete/jquery.autocomplete.js"></script>
-
-        <script>
+    <script>
         var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
         window.SailScores.init()
-        </script>
-    }
+    </script>
+}
