--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -57,10 +57,9 @@
                     <div id="collapseAdvanced" class="collapse" role="tabpanel" aria-labelledby="advancedHeading" data-parent="#advancedFields">
                         <div class="card-body">
                             <div class="form-group">
-                                <div class="checkbox">
-                                    <label>
-                                        <input asp-for="IsImportantSeries" /> List as Top Series
-                                    </label>
+                                <div class="form-check">
+                                    <input class="form-check-input" asp-for="IsImportantSeries" />
+                                    <label class="form-check-label"> List as Top Series</label>
                                 </div>
                             </div>
                             <div class="form-group">
