--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -56,17 +56,15 @@
                     <div id="collapseAdvanced" class="collapse" role="tabpanel" aria-labelledby="advancedHeading" data-parent="#advancedFields">
                         <div class="card-body">
                             <div class="form-group">
-                                <div class="checkbox">
-                                    <label>
-                                        <input asp-for="IsImportantSeries" /> List as Top Series
-                                    </label>
+                                <div class="form-check">
+                                    <input class="form-check-input" asp-for="IsImportantSeries" />
+                                    <label class="form-check-label"> List as Top Series</label>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="checkbox">
-                                    <label>
-                                        <input asp-for="ResultsLocked" /> Lock Results
-                                    </label>
+                                <div class="form-check">
+                                    <input class="form-check-input" asp-for="ResultsLocked" />
+                                    <label> Lock Results</label>
                                     <span class="small">Prevents scores from recalculating for this series</span>
                                 </div>
                             </div>
