--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -94,8 +94,8 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <label asp-for="DefaultScoringSystem"><i>Default Scoring System:</i></label>
-                @Html.DisplayFor(model => model.DefaultScoringSystem.Name)
+                <label asp-for="DefaultScoringSystemId"><i>Default Scoring System:</i></label>
+                @Html.DisplayFor(model => model.DefaultScoringSystemName)
             </div>
             <div class="col-md-6">
             </div>
