--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -93,7 +93,8 @@
                                asp-for="Latitude"></label>
                         <input asp-for="Latitude"
                                class="form-control col-6"
-                               type="number" step="any"/>
+                               type="text" pattern="[0-9]+([\.,][0-9]+)?" />
+                        <span asp-validation-for="Latitude" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group col-sm-6">
@@ -102,7 +103,8 @@
                                asp-for="Longitude"></label>
                         <input asp-for="Longitude"
                                class="form-control col-6"
-                               type="number" step="any" />
+                               type="text" pattern="[0-9]+([\.,][0-9]+)?" />
+                        <span asp-validation-for="Longitude" class="text-danger"></span>
                     </div>
                 </div>
             </div>
