--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "SailScores";
     ViewData["MetaDescription"] = "Fast mobile-friendly web-based sailing scores";
-    ViewData["MetaKeywords"] = "sailing results scores web mobile-friendly";
+    ViewData["MetaKeywords"] = "sailing race scoring results scores sail web mobile-friendly";
 }
 <h1 class="display-4">SailScores</h1>
 <p class="lead">Simple score collection and reporting for one-design sailing.</p>
