--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,6 +6,14 @@
     @ViewData["Title"]
 </h3>
 <h3>
+    January 23rd, 2019
+</h3>
+<h5>New Feature</h5>
+<em>Weather!</em>
+<p>If the location of your club is set, SailScores will download and include the current weather
+    conditions when you enter race results. The weather conditions will be displayed in the
+    headers of series results, with a wind direction arrow, wind speed and selected icon.</p>
+<h3>
     November 26th, 2019
 </h3>
 <h5>New Features</h5>
