--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -71,5 +71,5 @@ Sailscores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">j
 <address>
     <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
 </address>
-
-<p><code>v@Model.Version</code></p>
+<br/>
+<p><small><code>v@(Model.Version)</code></small></p>
