--- a/SailScores.Web/Views/Series/Delete.cshtml
+++ b/SailScores.Web/Views/Series/Delete.cshtml
@@ -29,7 +29,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-controller="Admin"
            asp-action="Index"
            asp-fragment="series"
