--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -55,7 +55,7 @@ We're working on new features, including:
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
     <li>Fields to track race conditions, with analysis for competitors in different conditions.</li>
     <li>More import and export options to integrate with existing scoring software.</li>
-    <li>Deeper trend reporting for clubs: Are your races growing year orver year?</li>
+    <li>Deeper trend reporting for clubs: Are your races growing year over year?</li>
     <li>More options for result entry: let's keep making result entry simpler and faster. We've got even more ideas for this...</li>
 </ul>
 <p>View a full list of issues and feature requests at <a href="https://github.com/jbfraser1/SailScores/issues">GitHub</a></p>
