--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,13 +6,23 @@
     @ViewData["Title"]
 </h3>
 <h3>
-    January 23rd, 2019
+    March 7th, 2020
+</h3>
+<h5>Update</h5>
+<p>
+    For the next few months updates may slow down. We're working on phone apps to support
+    offline score entry that integrate with the site.
+</p>
+<h3>
+    January 23rd, 2020
 </h3>
 <h5>New Feature</h5>
 <em>Weather!</em>
-<p>If the location of your club is set, SailScores will download and include the current weather
+<p>
+    If the location of your club is set, SailScores will download and include the current weather
     conditions when you enter race results. The weather conditions will be displayed in the
-    headers of series results, with a wind direction arrow, wind speed and selected icon.</p>
+    headers of series results, with a wind direction arrow, wind speed and selected icon.
+</p>
 <h3>
     November 26th, 2019
 </h3>
