allow .wellknown to be served

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -11,7 +11,7 @@
 <h5>Update</h5>
 <p>
     For the next few months updates may slow down. We're working on phone apps to support
-    offline score entry that integrate with the site.
+    offline score entry and integrate with this site.
 </p>
 <h3>
     January 23rd, 2020
