--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-12">
             <p>
-                <a href="@Model.Url" target="_blank">
+                <a href="@Model.Url" target="_blank" rel="noopener">
                     <span class="fas fa-external-link-alt"></span> @localizer["Club Web Site"]
                 </a>
             </p>
