--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -66,7 +66,7 @@
     <div class="container d-none d-lg-block">
         <div class="row">
             <div class="col-12">
-                <svg id="chart"></svg>
+                <svg id="chart" class="results-chart" data-series-id="@Model.Item.Id"></svg>
             </div>
         </div>
     </div>
@@ -81,8 +81,4 @@
 @section Scripts {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.min.js" integrity="sha256-+9Mf3cAVmxxudDsr1XwXUeRZFtvdWVYdq5/vcgiYyNU=" crossorigin="anonymous"></script>
     <script src="~/js/seriesChart.js"></script>
-    <script>
-var chart1 = new seriesChart();
-chart1.drawChart("@Model.Item.Id", "#chart");
-    </script>
 }
