Going to separate .js files

--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -176,8 +176,7 @@
 </div>
 
 @section Scripts {
-    <script type="text/javascript" src="~/js/createMultipleComp.js">
-    </script>
+    <script type="text/javascript" src="~/js/createMultipleComp.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
 }
