--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -136,8 +136,8 @@
                     </thead>
                     <tbody>
                         @foreach (var comp in fleet.Competitors.OrderBy(
-                        c => Model.Item.PreferAlternateSailNumbers ? (c.AlternativeSailNumber ?? c.SailNumber) : c.SailNumber)
-                        .ThenBy(c => c.Name))
+                       c => Model.Item.PreferAlternateSailNumbers ? (c.AlternativeSailNumber ?? c.SailNumber) : c.SailNumber)
+                       .ThenBy(c => c.Name))
                         {
                             <tr>
                                 <td>@(Model.Item.PreferAlternateSailNumbers ? (comp.AlternativeSailNumber ?? comp.SailNumber) : comp.SailNumber)</td>
@@ -165,7 +165,7 @@
                 @if (Model.Item.Series.Any(s => s.FleetId == fleet.Id))
                 {
                     <div class="container d-none d-sm-flex">
-                         <svg id="@($"chart{fleet.ShortName}")"></svg>
+                        <svg id="@($"chart{fleet.ShortName}")" class="results-chart" data-series-id="@Model.Item.Series.First(s => s.FleetId == fleet.Id).Id"></svg>
                     </div>
                 }
                 else
@@ -177,20 +177,7 @@
     </div>
 }
 
-
 @section Scripts {
-    <script src="~/vendor/bootstrap/js/bootstrap.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.min.js" integrity="sha256-+9Mf3cAVmxxudDsr1XwXUeRZFtvdWVYdq5/vcgiYyNU=" crossorigin="anonymous"></script>
     <script src="~/js/seriesChart.js"></script>
-    <script>
-
-@foreach (var fleet in Model.Item.Fleets)
-{
-                    @if (Model.Item.Series.Any(s => s.FleetId == fleet.Id))
-                {
-    @:var chart@(fleet.ShortName) = new seriesChart();
-    @:chart@(fleet.ShortName).drawChart("@Model.Item.Series.First(s => s.FleetId == fleet.Id).Id", "@($"#chart{fleet.ShortName}")");
-        }
-}
-    </script>
 }
