--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -57,7 +57,7 @@
             <div class="form-group col-md-6">
                 <label asp-for="FleetId" class="control-label">Fleet</label>
                 <small class="text-muted">Controls the list of available competitors</small>
-                <select id="fleetId" asp-for="FleetId" class="form-control" onchange="window.SailScores.loadFleet()">
+                <select id="fleetId" asp-for="FleetId" class="form-control">
                     @if (Model.FleetOptions.Count > 1)
                     {
                         <option selected="selected">Select a fleet...</option>
@@ -214,7 +214,7 @@
                 <ul class="list-group" id="results">
                     @await Html.PartialAsync("_scoreEntryPartial", Model)
                     @foreach (var score in (Model.Scores ??
-                      new List<SailScores.Web.Models.SailScores.ScoreViewModel>()))
+                     new List<SailScores.Web.Models.SailScores.ScoreViewModel>()))
                     {
                         <li id="@score.CompetitorId" class="list-group-item"
                             data-competitorid="@score.CompetitorId" data-originalScore="@score.Place">
@@ -341,11 +341,10 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
-    <script src="~/js/raceEditor.js"></script>
     <script src="~/vendor/devbridge-autocomplete/jquery.autocomplete.js"></script>
 
     <script>
     var scoreCodes = @Html.Raw(Json.Serialize(Model.ScoreCodeOptions));
-    window.SailScores.init()
     </script>
+    <script src="~/js/raceEditor.min.js"></script>
 }
